# archie

./: .gitignore  .pre-commit-config.yaml  main.py  mypy.ini  parse.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: check.yml
archie/: __init__.py  cli.py  config.py  parse.py
archie/api/: api.py  routes.py
archie/database/: database.py
archie/downloader/: downloader.py
archie/services/: base_download.py  base_redis.py  base_service.py
archie/services/soundcloud/: __init__.py  database.py  download.py
archie/services/youtube/: __init__.py  _filter.py  api.py  database.py  download.py
archie/sources/: filter.py  youtube.py
archie/tasks/: downloader.py  parse.py  parser.py
archie/utils/: config.py  pretty_yaml.py  utils.py
components/backend/: pyproject.toml  readme.md  requirements.txt
components/backend/archie/: cli.py  config.py  debug_server.py
components/backend/archie/api/: api.py  routes.py
components/backend/archie/services/: __init__.py  base_mongo.py  base_service.py
components/backend/archie/services/soundcloud/: __init__.py
components/backend/archie/services/youtube/: __init__.py  api.py  database.py
components/frontend/: components.json  package.json  pnpm-lock.yaml
components/frontend/src/routes/: +layout.svelte  +page.js  +page.svelte
database/: database.py
downloader/: downloader.py
sources/: filter.py  youtube.py
utils/: config.py  utils.py
