[tool.poetry]
name = "archie"
version = "0.1.0"
description = ""
authors = [
  "f0e <7321764+f0e@users.noreply.github.com>",
  "newgan <53710132+newgan@users.noreply.github.com>",
]
readme = "readme.md"
repository = "https://github.com/f0e/archie"
classifiers = [
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: Multimedia :: Video",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
yt-dlp = "^2024.7.7"
sqlalchemy = "^2.0.20"
requests = "^2.31.0"
pydantic = "^2.3.0"
pyyaml = "^6.0.1"
rich = "^13.5.2"
fastapi = "^0.103.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
redis = "^5.0.7"
soundcloud-v2 = "^1.5.3"
dacite = "^1.8.1"
orjson = "^3.10.6"
scdl = "^2.11.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.2"
types-pyyaml = "^6.0.12.11"
types-redis = "^4.6.0.20240425"
ruff = "^0.5.1"
pre-commit = "^3.7.1"
types-python-dateutil = "^2.9.0.20240316"

[tool.poetry.scripts]
archie = 'archie.cli:archie'
serve = 'archie.debug_server:start'

[tool.black]
line-length = 130

[tool.ruff]
ignore = [
  "E501", # line length
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
